add more currencies

--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 3,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 21,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -43,7 +43,7 @@
         "    sell_count = 0\n",
         "    buy_count = 0\n",
         "    #print(rsi.values)\n",
-        "    vwap_threshold = 0.00005\n",
+        "    vwap_threshold = 0.0004\n",
         "    for i in range(len(df)):\n",
         "        if max(df['Open'][i], df['Close'][i]) >= (1 + vwap_threshold) * df['VWAP'][i]:\n",
         "            bearish = False\n",
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 5,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -115,20 +115,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 506,\n",
-              "  'time': '2023-11-10T04:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.06688', 'h': '1.06696', 'l': '1.06672', 'c': '1.06691'}},\n",
+              "  'volume': 308,\n",
+              "  'time': '2023-11-10T21:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.06856', 'h': '1.06865', 'l': '1.06838', 'c': '1.06848'}},\n",
               " {'complete': True,\n",
-              "  'volume': 339,\n",
-              "  'time': '2023-11-10T04:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.06690', 'h': '1.06695', 'l': '1.06679', 'c': '1.06684'}},\n",
-              " {'complete': False,\n",
-              "  'volume': 54,\n",
-              "  'time': '2023-11-10T04:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.06684', 'h': '1.06696', 'l': '1.06682', 'c': '1.06696'}}]"
+              "  'volume': 373,\n",
+              "  'time': '2023-11-10T21:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.06848', 'h': '1.06863', 'l': '1.06832', 'c': '1.06836'}},\n",
+              " {'complete': True,\n",
+              "  'volume': 408,\n",
+              "  'time': '2023-11-10T21:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.06834', 'h': '1.06854', 'l': '1.06826', 'c': '1.06847'}}]"
             ]
           },
-          "execution_count": 94,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -169,14 +169,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 7,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
       "outputs": [],
       "source": [
         "def trading_job(currency, string_currency):\n",
-        "    candles = get_candles(3, currency)\n",
+        "    candles = get_candles(15, currency)\n",
         "    dfstream = pd.DataFrame(columns=['Open','Close','High','Low', 'Volume'])\n",
         "    i=0\n",
         "\n",
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 23,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
@@ -241,104 +241,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.636217\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.638123\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.638300\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.641859\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.642062\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.642636\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 21:51:00 PST)\" was missed by 0:03:10.642940\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "signal: -signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.722619\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.724015\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.724118\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.724216\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.726278\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.726358\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-09 22:11:00 PST)\" was missed by 0:03:59.726685\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
             "signal: -signal: -\n",
             "signal: -\n",
             "signal: -\n",
-            "signal: -\n",
             "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "signal: -\n",
-            "\n",
-            "signal: -\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
@@ -357,21 +263,21 @@
             "signal: -\n",
             "signal: -\n",
             "signal: -signal: -\n",
-            "signal: -\n",
             "\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
@@ -384,17 +290,10 @@
             "signal: -\n",
             "signal: -\n",
             "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
             "signal: -signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
             "\n",
+            "signal: -\n",
+            "signal: -\n",
             "signal: -\n",
             "signal: -\n",
             "signal: -\n"
@@ -418,19 +317,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "-       9443\n",
-              "Buy      292\n",
-              "Sell     265\n",
+              "-       9209\n",
+              "Buy      397\n",
+              "Sell     394\n",
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 104,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
