--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 37,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -19,12 +19,13 @@
         "import talib\n",
         "import pandas_ta as ta\n",
         "import numpy as np\n",
-        "import pandas as pd\n"
+        "import pandas as pd\n",
+        "import random\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 38,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -105,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 39,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -128,7 +129,7 @@
               "  'mid': {'o': '1.06834', 'h': '1.06854', 'l': '1.06826', 'c': '1.06847'}}]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -169,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 41,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -218,13 +219,15 @@
         "    #signal = 2\n",
         "    #Sell\n",
         "    if signal == \"Sell\":\n",
-        "        mo = MarketOrderRequest(instrument=string_currency, units=-2000, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
+        "        random_integer = random.randint(-100, 100)\n",
+        "        mo = MarketOrderRequest(instrument=string_currency, units=-2000 + random_integer, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)\n",
         "    #Buy\n",
         "    elif signal == \"Buy\":\n",
-        "        mo = MarketOrderRequest(instrument=string_currency, units=2000, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
+        "        random_integer = random.randint(-100, 100)\n",
+        "        mo = MarketOrderRequest(instrument=string_currency, units=2000 + random_integer, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)"
@@ -232,87 +235,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "currency_pairs = [Pair.AUD_CAD, Pair.AUD_JPY, Pair.AUD_NZD, Pair.AUD_USD,\n",
+        "    Pair.CAD_CHF, Pair.CAD_JPY,\n",
+        "    Pair.EUR_AUD, Pair.EUR_CAD, Pair.EUR_CHF, Pair.EUR_GBP, Pair.EUR_JPY, Pair.EUR_NZD, Pair.EUR_USD,\n",
+        "    Pair.GBP_AUD, Pair.GBP_CAD, Pair.GBP_CHF, Pair.GBP_JPY, Pair.GBP_NZD, Pair.GBP_USD,\n",
+        "    Pair.NZD_CAD, Pair.NZD_CHF, Pair.NZD_JPY, Pair.NZD_USD,\n",
+        "    Pair.USD_CAD, Pair.USD_CHF, Pair.USD_JPY]\n",
+        "\n",
+        "list_of_str_currency = [\"AUD_CAD\", \"AUD_JPY\", \"AUD_NZD\", \"AUD_USD\",\n",
+        "    \"CAD_CHF\", \"CAD_JPY\",\n",
+        "    \"EUR_AUD\", \"EUR_CAD\", \"EUR_CHF\", \"EUR_GBP\", \"EUR_JPY\", \"EUR_NZD\", \"EUR_USD\",\n",
+        "    \"GBP_AUD\", \"GBP_CAD\", \"GBP_CHF\", \"GBP_JPY\", \"GBP_NZD\", \"GBP_USD\",\n",
+        "    \"NZD_CAD\", \"NZD_CHF\", \"NZD_JPY\", \"NZD_USD\",\n",
+        "    \"USD_CAD\", \"USD_CHF\", \"USD_JPY\"]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "signal: -signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -signal: -\n",
-            "\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n",
-            "signal: -\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "list_of_currency = [Pair.EUR_USD, Pair.EUR_GBP, Pair.USD_JPY, Pair.AUD_USD, Pair.USD_CAD, Pair.CAD_JPY, Pair.NZD_USD]\n",
-        "list_of_str_currency = [\"EUR_USD\", \"EUR_GBP\", \"USD_JPY\", \"AUD_USD\",\"USD_CAD\",\"CAD_JPY\",\"NZD_USD\"]\n",
-        "\n",
         "# for i in range (len(list_of_str_currency)):\n",
-        "#     trading_job(list_of_currency[i],list_of_str_currency[i])\n",
+        "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
         "\n",
         "\n",
         "scheduler = BlockingScheduler()\n",
-        "for i in range (len(list_of_str_currency)):\n",
-        "    scheduler.add_job(trading_job, 'cron', args = [list_of_currency[i],list_of_str_currency[i]], day_of_week='mon-fri', hour='00-23', minute='1,11,21,31,41,51', start_date='2022-01-12 12:00:00')\n",
-        "scheduler.start()\n",
-        "#ADD RANDOM"
+        "for i in range (len(currency_pairs)):\n",
+        "    scheduler.add_job(trading_job, 'cron', args = [currency_pairs[i],list_of_str_currency[i]], day_of_week='mon-fri', hour='00-23', minute='1,11,21,31,41,51', start_date='2022-01-12 12:00:00')\n",
+        "scheduler.start()\n"
       ]
     },
     {
