--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -261,7 +261,260 @@
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.962676\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.973204\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.973795\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.974330\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.974559\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.974969\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.975218\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.975700\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.976004\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.976678\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.977354\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.978146\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.979181\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.980376\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.981171\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.982175\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.982912\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.984107\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.985237\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.986469\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.987165\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.988088\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.989254\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.990359\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.991140\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:11:00 PST)\" was missed by 0:05:44.991903\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n"
+          ]
+        }
+      ],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
