--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 47,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -513,12 +513,90 @@
             "signal: -\n",
             "signal: -\n"
           ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.633791\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.643333\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.644026\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.644357\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.644519\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.644741\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.645060\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.645305\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.645689\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.646208\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.646330\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.646530\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.647328\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.648145\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.649882\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.651154\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.652091\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.653053\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.654014\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.654900\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.655743\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.656640\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.657362\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.658263\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.658979\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,11,21,31,41,51'], next run at: 2023-11-10 23:51:00 PST)\" was missed by 0:00:01.660002\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -\n",
+            "signal: -signal: -\n",
+            "\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32m/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb Cell 8\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m (\u001b[39mlen\u001b[39m(currency_pairs)):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     scheduler\u001b[39m.\u001b[39madd_job(trading_job, \u001b[39m'\u001b[39m\u001b[39mcron\u001b[39m\u001b[39m'\u001b[39m, args \u001b[39m=\u001b[39m [currency_pairs[i],list_of_str_currency[i]], day_of_week\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmon-fri\u001b[39m\u001b[39m'\u001b[39m, hour\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m00-23\u001b[39m\u001b[39m'\u001b[39m, minute\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m1,11,21,31,41,51\u001b[39m\u001b[39m'\u001b[39m, start_date\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m2022-01-12 12:00:00\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m scheduler\u001b[39m.\u001b[39;49mstart()\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/apscheduler/schedulers/blocking.py:21\u001b[0m, in \u001b[0;36mBlockingScheduler.start\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event \u001b[39m=\u001b[39m Event()\n\u001b[1;32m     20\u001b[0m \u001b[39msuper\u001b[39m(BlockingScheduler, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39mstart(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m---> 21\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_main_loop()\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/apscheduler/schedulers/blocking.py:30\u001b[0m, in \u001b[0;36mBlockingScheduler._main_loop\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     28\u001b[0m wait_seconds \u001b[39m=\u001b[39m TIMEOUT_MAX\n\u001b[1;32m     29\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate \u001b[39m!=\u001b[39m STATE_STOPPED:\n\u001b[0;32m---> 30\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_event\u001b[39m.\u001b[39;49mwait(wait_seconds)\n\u001b[1;32m     31\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event\u001b[39m.\u001b[39mclear()\n\u001b[1;32m     32\u001b[0m     wait_seconds \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_jobs()\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/threading.py:607\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    605\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    606\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 607\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cond\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    608\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
+            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/threading.py:324\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    323\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m--> 324\u001b[0m         gotit \u001b[39m=\u001b[39m waiter\u001b[39m.\u001b[39;49macquire(\u001b[39mTrue\u001b[39;49;00m, timeout)\n\u001b[1;32m    325\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    326\u001b[0m         gotit \u001b[39m=\u001b[39m waiter\u001b[39m.\u001b[39macquire(\u001b[39mFalse\u001b[39;00m)\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
-        "\n",
         "\n",
         "scheduler = BlockingScheduler()\n",
         "for i in range (len(currency_pairs)):\n",
@@ -528,19 +606,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "-       9209\n",
-              "Buy      397\n",
-              "Sell     394\n",
+              "-       8587\n",
+              "Buy      738\n",
+              "Sell     675\n",
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
