--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -290,19 +290,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'pd' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m da\u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mEURUSD_Candlestick_5_M_ASK_30.09.2019-30.09.2022.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m da \u001b[39m=\u001b[39m da[:\u001b[39m10000\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m signals \u001b[39m=\u001b[39m []\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "-       9209\n",
+              "Buy      397\n",
+              "Sell     394\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
