--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 308,\n",
-              "  'time': '2023-11-10T21:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.06856', 'h': '1.06865', 'l': '1.06838', 'c': '1.06848'}},\n",
+              "  'volume': 380,\n",
+              "  'time': '2023-11-13T00:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.06839', 'h': '1.06846', 'l': '1.06822', 'c': '1.06839'}},\n",
               " {'complete': True,\n",
-              "  'volume': 373,\n",
-              "  'time': '2023-11-10T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.06848', 'h': '1.06863', 'l': '1.06832', 'c': '1.06836'}},\n",
-              " {'complete': True,\n",
-              "  'volume': 408,\n",
-              "  'time': '2023-11-10T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.06834', 'h': '1.06854', 'l': '1.06826', 'c': '1.06847'}}]"
+              "  'volume': 506,\n",
+              "  'time': '2023-11-13T01:00:00.000000000Z',\n",
+              "  'mid': {'o': '1.06840', 'h': '1.06872', 'l': '1.06832', 'c': '1.06857'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 492,\n",
+              "  'time': '2023-11-13T01:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.06855', 'h': '1.06870', 'l': '1.06812', 'c': '1.06841'}}]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -302,7 +302,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -323,6 +323,15 @@
         "        signals.append(signal)\n",
         "x = pd.Series(signals)\n",
         "x.value_counts()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#consider making 65 / 35 RSI + 1 and make above 70 / 30 as + 2 ssss"
       ]
     },
     {
